# hedron_pb_bug_repro

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel  refresh_compile_commands.sh
example/: BUILD.bazel  main.cc
example/proto/: BUILD.bazel  example.proto
